# python-discord-bot

./: .gitignore  README.md  main.py  pyproject.toml
helper/: TriviaDB.py  VSBattles.py
tools/: kanji.py  vs_battles.py
