[tool.poetry]
name = "repl_python3_python-discord-bot"
version = "0.1.0"
description = ""
authors = ["SayyidImaduddin <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
bs4 = "^0.0.1"
lxml = "^4.6.3"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
